Implement a query class for better counting

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SOURCE_FILES
     wordle.h
     wordle.cpp
     trie.h
-    trie.cpp
+    trie.tpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
