fix progressbar spam

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,8 @@ set(SOURCE_FILES
     wordle.cpp
     trie.h
     trie.tpp
+    ProgressBar.h
+    ProgressBar.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
