use a regression to estimate amount of guesses it will take if guess is wrong

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,6 +9,8 @@ set(SOURCE_FILES
     ProgressBar.cpp
     Simulator.h
     Simulator.cpp
+    wordleRegression.h
+    wordleRegression.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})
